--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Widgets</string>
+    <string name="animal">Animal</string>
+    <string name="submit">Submit</string>
+    <string name="content_des">Picture</string>
 </resources>
